Fix: Fix style nav-global z-index

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -141,6 +141,12 @@ a:hover {
   text-decoration: none;
 }
 
+@media (min-width: 768px) {
+  .nav-global {
+    z-index: 10002;
+  }
+}
+
 .nav-global .nav-global-logo {
   display: flex;
 }
